force-app/main/default/objects/Discount_Guidance__c/Discount_Guidance__c.object-meta.xml
<CustomObject>
    <description>Maintains and stores discount grids that are used to provide guidance for discounts during the quoting and agreement processes</description>
    <label>Discount Guidance</label>
    <nameField>
        <displayFormat>DGP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Guidance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>