force-app/main/default/objects/Discount_Guidance__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Distribution channel for the discount guidance. Can be either direct or indirect.</description>
    <inlineHelpText>Distribution channel for the discount guidance. Can be either direct or indirect.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>