force-app/main/default/objects/Discount_Guidance__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Country to which the discount guidance is applied.</description>
    <inlineHelpText>Country to which the discount guidance is applied.</inlineHelpText>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>