force-app/main/default/objects/Discount_Guidance__c/fields/Customer_Discount_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discount_Tier__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Tiering system to account for customer annual consumable spend or instrument credit. Can be a number from 1 to 11.</description>
    <inlineHelpText>Tiering system to account for customer annual consumable spend or instrument credit. Can be a number from 1 to 11.</inlineHelpText>
    <label>Customer Discount Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Discount_Tier</valueSetName>
    </valueSet>
</CustomField>