force-app/main/default/objects/Discount_Guidance__c/fields/Discount_Grid_Group__c.field-meta.xml
<CustomField>
    <fullName>Discount_Grid_Group__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Material master attribute used to map a product or group of products to a appropriate discount grid.</description>
    <inlineHelpText>Material master attribute used to map a product or group of products to a appropriate discount grid.</inlineHelpText>
    <label>Discount Grid Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Discount_Grid_Group</valueSetName>
    </valueSet>
</CustomField>