force-app/main/default/objects/Discount_Guidance__c/fields/Discount_Guidance_Level__c.field-meta.xml
<CustomField>
    <fullName>Discount_Guidance_Level__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>The level of discount guidance. Can be either at the price list level or at country level.</description>
    <inlineHelpText>The level of discount guidance. Can be either at the price list level or at country level.</inlineHelpText>
    <label>Discount Guidance Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Discount_Guidance_Level</valueSetName>
    </valueSet>
</CustomField>