force-app/main/default/objects/Discount_Guidance__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>End date of discount guidance grid.</description>
    <inlineHelpText>End date of discount guidance grid.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>