force-app/main/default/objects/Discount_Guidance__c/fields/Median_Discount__c.field-meta.xml
<CustomField>
    <fullName>Median_Discount__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Median discount for discount guidance, focused on specific channel, geographical area, currency, discount grid group, primary customer type, and customer tier.</description>
    <inlineHelpText>Median discount for discount guidance, focused on specific channel, geographical area, currency, discount grid group, primary customer type, and customer tier.</inlineHelpText>
    <label>Median Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>