force-app/main/default/objects/Discount_Guidance__c/fields/Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Type__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Price list that discount guidance is applied to. This is tied to SAP pricing master.</description>
    <inlineHelpText>Price list that discount guidance is applied to. This is tied to SAP pricing master.</inlineHelpText>
    <label>Price List Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Price_List_Type</valueSetName>
    </valueSet>
</CustomField>