force-app/main/default/objects/Discount_Guidance__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Start date of discount guidance grid.</description>
    <inlineHelpText>Start date of discount guidance grid.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>