force-app/main/default/objects/Discount_Guidance__c/fields/Tier_Min__c.field-meta.xml
<CustomField>
    <fullName>Tier_Min__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>The lower limit of customer discount tier.</description>
    <inlineHelpText>The lower limit of customer discount tier.</inlineHelpText>
    <label>Tier Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>