force-app/main/default/objects/Discount_Guidance__c/fields/Tier_Type__c.field-meta.xml
<CustomField>
    <fullName>Tier_Type__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Decide whether to use account consumable spend or instrument credits for Tier Max and Tier Min.</description>
    <inlineHelpText>Decide whether to use account consumable spend or instrument credits for Tier Max and Tier Min.</inlineHelpText>
    <label>Tier Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spend</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>