force-app/main/default/objects/Discount_Guidance__c/validationRules/checkDGLevelIfCountryMakeFieldsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>checkDGLevelIfCountryMakeFieldsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Discount_Guidance_Level__c, &apos;Country&apos;),
    OR(
        ISBLANK(TEXT(Channel__c)),
        ISBLANK(TEXT(Primary_Customer_Type__c)),
        ISBLANK(TEXT(Discount_Grid_Group__c)),
        ISBLANK(TEXT(Customer_Discount_Tier__c)),
        ISBLANK(Country__c),
        ISBLANK(Start_Date__c),
        ISBLANK(End_Date__c),
        ISBLANK(Tier_Min__c),
        ISBLANK(Tier_Max__c),
        ISBLANK(Median_Discount__c),
        ISBLANK(Max_Discount__c)
    )
)</errorConditionFormula>
    <errorMessage>Channel, Discount Grid Group,  Median Discount, Max Discount, Country, Start Date, End Date, Customer Discount Tier, Tier Min, Tier Max, and Primary Customer Type fields are required when Discount Guidance Level is Country.</errorMessage>
</ValidationRule>