force-app/main/default/objects/Discount_Guidance__c/validationRules/checkDGLevelIsPriceListType.validationRule-meta.xml
<ValidationRule>
    <fullName>checkDGLevelIsPriceListType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Discount_Guidance_Level__c, &apos;Price List Type&apos;),
NOT(ISBLANK(Country__c))
)</errorConditionFormula>
    <errorMessage>Country should be blank if Discount guidance level is  Price List Type.</errorMessage>
</ValidationRule>