force-app/main/default/objects/Discount_Guidance__c/validationRules/checkDiscountGuidanceLevelIsCountry.validationRule-meta.xml
<ValidationRule>
    <fullName>checkDiscountGuidanceLevelIsCountry</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Discount_Guidance_Level__c, &apos;Country&apos;),
    NOT(ISBLANK(TEXT(Price_List_Type__c)))
)</errorConditionFormula>
    <errorMessage>Price List Type should be blank if Discount guidance level is  Country.</errorMessage>
</ValidationRule>