force-app/main/default/objects/Discount_Guidance__c/validationRules/checkEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>checkEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
    <errorMessage>Invalid date. The End date should  be greater than Start date.</errorMessage>
</ValidationRule>