force-app/main/default/objects/Discount_Guidance__c/validationRules/checkMaxDiscount.validationRule-meta.xml
<ValidationRule>
    <fullName>checkMaxDiscount</fullName>
    <active>true</active>
    <errorConditionFormula>Max_Discount__c &lt; Median_Discount__c</errorConditionFormula>
    <errorMessage>Incorrect value. Max Discount should be always greater than or equal to Median Discount.</errorMessage>
</ValidationRule>