force-app/main/default/objects/Discount_Guidance__c/validationRules/checkMedianDiscount.validationRule-meta.xml
<ValidationRule>
    <fullName>checkMedianDiscount</fullName>
    <active>true</active>
    <errorConditionFormula>Median_Discount__c &gt; Max_Discount__c</errorConditionFormula>
    <errorMessage>Incorrect value. Median Discount should be always less than or equal to Max Discount.</errorMessage>
</ValidationRule>