force-app/main/default/objects/Discount_Guidance__c/validationRules/checkStartDateLessThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>checkStartDateLessThanEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;= End_Date__c</errorConditionFormula>
    <errorMessage>Invalid date. The start date should be earlier than End date.</errorMessage>
</ValidationRule>