force-app/main/default/objects/Discount_Guidance__c/validationRules/checkStartDateNotPast.validationRule-meta.xml
<ValidationRule>
    <fullName>checkStartDateNotPast</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Invalid date. The start date should not be in past at the time of upload.</errorMessage>
</ValidationRule>