force-app/main/default/objects/Discount_Guidance__c/validationRules/checkTierMaxGreaterThanTierMin.validationRule-meta.xml
<ValidationRule>
    <fullName>checkTierMaxGreaterThanTierMin</fullName>
    <active>true</active>
    <errorConditionFormula>Tier_Max__c &lt;= Tier_Min__c</errorConditionFormula>
    <errorMessage>Incorrect value. Tier Max should be always greater than Tier Min.</errorMessage>
</ValidationRule>