force-app/main/default/objects/Discount_Guidance__c/validationRules/checkTierMaxGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>checkTierMaxGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>Tier_Max__c &lt;= 0</errorConditionFormula>
    <errorMessage>Tier Max should be greater than 0.</errorMessage>
</ValidationRule>