force-app/main/default/objects/Discount_Guidance__c/validationRules/checkTierMin.validationRule-meta.xml
<ValidationRule>
    <fullName>checkTierMin</fullName>
    <active>true</active>
    <errorConditionFormula>Tier_Min__c &gt;= Tier_Max__c</errorConditionFormula>
    <errorMessage>Incorrect value. Tier Min should be always less than Tier Max.</errorMessage>
</ValidationRule>