force-app/main/default/objects/Discount_Guidance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Discount_Guidance_Level__c</columns>
    <columns>Country__c</columns>
    <columns>Price_List_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Customer_Discount_Tier__c</columns>
    <columns>Tier_Min__c</columns>
    <columns>Tier_Max__c</columns>
    <columns>Primary_Customer_Type__c</columns>
    <columns>Discount_Grid_Group__c</columns>
    <columns>Median_Discount__c</columns>
    <columns>Max_Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>